/*
 * $Id: ChangeLog,v 1.2279 2004/02/13 18:25:36 jonnymind Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2004-02-13 21:14 UTC+0100 Przemyslaw Czerpak <druzus@polbox.com>
  - xharbour/tests/gt_info.prg
  + xharbour/tests/gtinfo.prg
    * file renamed

2004-02-13 19:24 UTC+0100 Giancarlo Niccolai <gian@niccolai.ws>
  * source/rtl/achoice.prg
    * Added mouse support: a click selects, dbl click emulates K_ENTER
      and mousewheel goes pgup/down

  * source/rtl/gtxvt/gtxvt.c
    * Added support for mouse wheel
      (As currently middle mouse button is a shortcut for fast paste, and
       all X applications are invited to follow this behavior, I have not
       yet implemented middle mouse button up/down).

  * tests/ac_test.prg
    * Added an inkey() at the end to allow results display in windowed GTs.

2004-02-13 17:53 UTC+0100 Giancarlo Niccolai <gian@niccolai.ws>
  * source/rtl/menuto.prg
    * Temporary change of MENUTO mouse behavior; waiting for comments

  * tests/menutest.prg
    * Added mouse events; visual upgrade.

  * include/inkey.ch
    * Added bitfield event mask for middle mouse and mouse wheel

2004-02-13 12:04 UTC+0100 Przemyslaw Czerpak <druzus@polbox.com>
  * xharbour/source/rtl/round.c
    * fixed hacked version of hb_numRound when argument is 0

2004-02-13 16:25 UTC+0700 Andi Jahja <xharbour@cbn.net.id>
  * source/vm/proc.c
    ! casting.

  * source/rtl/gtgraph.c
  * source/rtl/hbsrlraw.c
  * source/rtl/gtwin/gtwin.c
  * source/rtl/gtwvt/gtwvt.c
  * source/rtl/gtalleg/gtalleg.c
    ! code clean-up ( mostly, consistent declaration of variable type to be
      compared with passed parameter)

    /*
    I am sorry but the little thing is like the following sample.
    It is known that every C compiler does automatically expand values upon