@@ -1,5 +1,5 @@
 /*
- * $Id: ChangeLog,v 1.2279 2004/02/13 18:25:36 jonnymind Exp $
+ * $Id: ChangeLog,v 1.2280 2004/02/13 20:12:27 druzus Exp $
  */
 
 /* Use this format for the entry headers:
@@ -7,6 +7,12 @@
    For example:
    2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
 */
+
+2004-02-13 16:25 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
+  * source/vm/hvm.c
+    + Added few missing initializations of asSymbol.uiSuperClass
+  * source/vm/proc.c
+    * Minor revision.
 
 2004-02-13 21:14 UTC+0100 Przemyslaw Czerpak <druzus@polbox.com>
   - xharbour/tests/gt_info.prg
